feat: delete appointment
